--- a/2022/Tarea2/doc/doc.tex
+++ b/2022/Tarea2/doc/doc.tex
@@ -27,6 +27,8 @@
 \begin{document}
 \begin{titlepage}
 \input{Header_original}
+\vspace{0.5cm}
+Los códigos tanto de \textit{c++} como de \textit{gnuplot}, se pueden encontrar en la carpeta de \href{https://github.com/DSarceno/Computational_Physics/tree/main/2022/Tarea2}{Github}.
 
 \input{content.tex}
 
